--- a/app/static/reset.css
+++ b/app/static/reset.css
@@ -84,7 +84,8 @@
  body {
      -webkit-text-size-adjust: none;
      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-     color:595757;
+     color:#333;
+    background-color: #f5f5f5;
     font-size: 16px;
     font-family: 'PingFang SC','STHeitiSC-Light',"Microsoft YaHei",Arial,"Helvetica Neue",Helvetica,sans-serif;
  }
@@ -151,3 +152,40 @@
     background: gray;
     vertical-align: middle;
 }
+
+
+/*顶部导航*/
+ /*上*/
+ .box-top {
+   height: 1.95rem;
+   background-color: #3190e8;
+   border-bottom: 1px solid #fff ;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+ }
+ .left {
+   margin-top: -.2rem;
+   font-size: 1.2rem;
+   color: white;
+   position: absolute;
+   left: 10px;
+ }
+
+ .right {
+   font-size: 0.8rem;
+   color: #fff;
+   font-weight: 700;
+ }
+
+/*去除input边框*/
+ input:focus {
+     outline: none;
+ }
+button:focus {
+    outline: none;
+}
+
+ button {
+     border: none;
+ }
